add branch_id to animal
